[package]
name = "batchmarching"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"

[features]
count_insns = []

[profile.dev]
debug = true
opt-level = 3
overflow-checks = true
debug-assertions = true

[profile.release]
debug = false
# Enable all optimizations for maximum performance
opt-level = 3
codegen-units = 1
lto = true
overflow-checks = false
debug-assertions = false
